Adicao do campo de flag de matricula